# pipefix-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  models.py  pipeline.py  tasks.py
server/: __init__.py  app.py
